--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,9 +8,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>회원가입 페이지</title>
     <script>
+        $(document).ready(function () {
+            let username = $("meta[name='username']").attr("content")
+            if ( username != null ) {
+                alert("이미 로그인이 되어있습니다.");
+                window.location.replace("/");
+            }
+        })
+
+        function onclickRegister() {
+            let username = $('#username').val();
+            let password = $('#password').val();
+            let passwordChk = $('#passwordChk').val();
+            let data = {'username': username, 'password': password, 'passwordChk': passwordChk};
+
+            $.ajax({
+                type: 'POST',
+                url: '/user/signup',
+                contentType: "application/json",
+                data: JSON.stringify(data),
+                success: function (response) {
+                    window.location.replace("/user/loginView");
+                },
+                error: function (request) {
+                    alert(request.responseText);
+                }
+            })
+
+        }
+
         function onclickAdmin() {
             // Get the checkbox
             var checkBox = document.getElementById("admin-check");
@@ -18,7 +48,7 @@
             var box = document.getElementById("admin-token");
 
             // If the checkbox is checked, display the output text
-            if (checkBox.checked == true){
+            if (checkBox.checked == true) {
                 box.style.display = "block";
             } else {
                 box.style.display = "none";
@@ -29,23 +59,20 @@
 <body>
 <div id="login-form">
     <div id="login-title">Sign up Select Shop</div>
+    <div class="login-id-label">닉네임</div>
+    <input type="text" name="username" id="username" placeholder="Username" class="login-input-box">
 
-    <form action="/user/signup" method="post">
-        <div class="login-id-label">Username</div>
-        <input type="text" name="username" placeholder="Username" class="login-input-box">
+    <div class="login-id-label">비밀번호</div>
+    <input type="password" name="password" id="password" class="login-input-box">
 
-        <div class="login-id-label">Password</div>
-        <input type="password" name="password" class="login-input-box">
+    <div class="login-id-label">비밀번호 확인</div>
+    <input type="password" id="passwordChk" class="login-input-box">
 
-        <div class="login-id-label">E-mail</div>
-        <input type="text" name="email" placeholder="E-mail" class="login-input-box">
-
-        <div>
-            <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 40px;">관리자
-            <input id="admin-token" type="password" name="adminToken" placeholder="관리자 암호" class="login-input-box" style="display:none">
-        </div>
-        <button id="login-id-submit">회원 가입</button>
-    </form>
+    <div>
+        <input id="admin-token" type="password" name="adminToken" placeholder="관리자 암호" class="login-input-box"
+               style="display:none">
+    </div>
+    <button id="login-id-submit" onclick="onclickRegister()">회원 가입</button>
 </div>
 </body>
 </html>
