--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,9 +16,6 @@
 <body>
 <div id="login-form">
     <div id="login-title">Log into Select Shop</div>
-    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=61db540d862894225a4938d0133cb467&redirect_uri=http://localhost:8080/user/kakao/callback&response_type=code'">
-        카카오로 로그인하기
-    </button>
     <button id="login-id-btn" onclick="location.href='/user/signup'">
         회원 가입하기
     </button>
@@ -53,7 +50,6 @@
             }),
             success: function (response, textStatus, request) {
                 const jwtToken = request.getResponseHeader("Authorization");
-
                 if (jwtToken) {
                     $.cookie("token", jwtToken);
                     $.ajaxSetup({
@@ -62,9 +58,14 @@
                         }
                     });
                     window.location.href = '/';
-                } else {
-                    window.location.href = '/user/loginView?error';
-                }
+                } //else {
+                 //    alert("닉네임이나 비밀번호를 확인해주세요")
+                 //    window.location.href = '/user/loginView?error';
+                 // }
+            },
+            error: function(jqXHR, error, errorthrown){
+                alert(jqXHR.responseText)
+                // window.location.href = '/user/loginView?error';
             }
         })
     }
